--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>React FTW!</title>
+  <title>Aucklan Transport</title>
 </head>
 <body>
   <div id="app"></div>
