--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>React FTW!</title>
-</head>
-<body>
-  <div id="app"></div>
 
-  <script src="bundle.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <title>Multi API Project</title>
+</head>
+
+<body>
+    <div id="app"></div>
+
+    <script src="bundle.js"></script>
 </body>
+
 </html>
