--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>EDA PErsonal Project</title>
+    <title>EDA Personal Project</title>
 </head>
 
 <body>
