search field added with buttin, not working though

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,12 @@
 </head>
 
 <body>
-    <div id="app"></div>
+    <div id="app">
+        <div class="info"></div>
+        <div class="actionboard"></div>
+        <textarea name="" id="" cols="30" rows="10" class="log"></textarea>
+
+    </div>
 
     <script src="bundle.js"></script>
 </body>
