--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Sethman's Personal Project</title>
 </head>
 
-<body>
+<body background="./background.png">
     <div id="app">
         <div class="info"></div>
         <div class="actionboard"></div>
